# rust-tictactoe

./: Cargo.toml
migrations/: 001_create_games.sql
src/: main.rs
src/handlers/: api.rs  pages.rs
src/models/: game.rs
static/css/: game.css
static/js/: game.js
templates/: base.html  game_detail.html  game_list.html  not_found.html
